tests/invalid/max_non_numeric/main.py
x: bool = True
y: bool = False
z: bool = max(x, y)
